# qmind

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  README.zh.md  config.yaml  config.yaml.template  pyproject.toml
paper/: fig_architecture.tex  qmind_paper.aux  qmind_paper.out  qmind_paper.tex
qmind/: __init__.py  audit_log.py  config.py  main.py  notification.py  scheduler.py  server.py
qmind/agents/: __init__.py  protocol.py  risk.py  single_agent.py  single_agent_prompt.py
qmind/agents/analysts/: __init__.py  base.py  fundamental.py  news.py  runner.py  sentiment.py  technical.py
qmind/agents/researchers/: __init__.py  disagreement.py  leader.py  skeptic.py  trust.py
qmind/audit/: __init__.py  bias_checker.py
qmind/backtest/: ablation.py  calibration.py  cost_model.py  p_report.py  partition.py
qmind/data/: symbol_map.py  time_guard.py
qmind/data/sources/: binance_source.py  (+4 more)
qmind/execution/: __init__.py  base.py  dry_run.py  factory.py  validator.py
qmind/graph/: __init__.py  pipeline.py  routers.py  state.py
qmind/learning/: __init__.py  cvrf.py  cvrf_pipeline.py  evaluator.py  injector.py  memory.py
qmind/llm/: __init__.py  client.py  router.py  structured.py
qmind/strategies/: __init__.py  base.py  registry.py
qmind/tools/: __init__.py  market_data.py  portfolio.py
references/papers/: _SYNTHESIS.md
tests/: conftest.py  test_analysts.py  test_audit.py  test_bias_checker.py  test_calibration.py  test_cli.py  test_config.py  test_cost_model.py  test_cvar.py  test_cvrf.py  test_cvrf_reflection.py  test_data_sources.py  test_disagreement.py  test_dry_run.py  test_exchange_adapters.py  test_execution_base.py  test_factory.py  test_llm_client.py  test_models.py  test_notification.py  test_p_report.py  test_partition.py  test_pipeline_nodes.py  test_portfolio.py  test_risk_control.py  test_routers.py  test_scheduler.py  test_strategies.py  test_strategies_builtin.py  test_symbol_map.py  test_time_guard.py  test_validator.py
(+22 files in other folders)
